# kenshi-agent-env

./: .env.example  .gitignore  ARCHITECTURE.md  BUILD_REPORT.md  CHANGELOG.md  CODING_AGENT_PROMPT.md  README.md  SECURITY_AND_SAFETY.md  STATUS.md  dev  kenshi-agent-env-continuous-agent-loop-prompt-v2.md  kenshi-agent-env-continuous-agent-loop-prompt.md  pyproject.toml
benchmarks/: one_day_survival.yaml
config/: calibration.example.yaml  default.yaml  live.burnin.yaml  live.example.yaml
docs/: ACTION_LEDGER.md  ADR_CALIBRATION_IDENTITY.md  ADR_CAUSAL_NATIVE_COMMANDS.md  ADR_CONTROL_MODES.md  ADR_INPUT_BOUNDARY_AUTHORITY.md  ADR_SAFETY_SUPERVISOR.md  ADR_STABLE_NATIVE_IDENTITY.md  ADR_STATEFUL_MOVEMENT_OPTIONS.md  ADR_WORLD_STATE_STREAM.md  CAMERA_VIEW.md  CONTINUOUS_PLANNING.md  ENGINEERING_LOOP_STATE.md  EXPERIMENTS.md  EXTERNAL_PLANNER_PROTOCOL.md  FOOD_PROCUREMENT.md  KENSHI_CONTROL_AND_PLUGIN_RESEARCH.md  LIVE_STABILITY_INCIDENT_20260723.md  LIVE_VALIDATION_CHECKLIST.md  MOVEMENT_SKILLS.md  TELEMETRY_PROTOCOL.md  UPSTREAM_LOCK.md  UPSTREAM_LOCK.template.md  WINDOWS_NATIVE_SETUP.md  native-media.lock.json
examples/: procurement_camera_pan_probe.jsonl  procurement_camera_rotate_probe.jsonl  procurement_clear_highlights_probe.jsonl  procurement_close_map_probe.jsonl  procurement_focus_probe.jsonl  procurement_map_zoom_out_probe.jsonl  procurement_map_zoom_probe.jsonl  procurement_pause_probe.jsonl  procurement_world_zoom_out_probe.jsonl  scaffold-smoke-summary.json  scripted_policy.jsonl  telemetry.latest.json
prompts/: memory_compactor.md  planner_system.md
(+118 files in other folders)
